kubernetes/fava-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: fava
  ports:
    - port: 80
      targetPort: 5000
