kubernetes/fava-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtual-host-ingress
spec:
  rules:
    - host: fava.ocf.berkeley.edu
      http:
        paths: 
          - backend:
              serviceName: service
              servicePort: 80
