kubernetes/fava.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: fava
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: fava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fava
  template:
    metadata:
      labels:
        app: fava
    spec:
      volumes:
        - name: fava-pv-beancountfile
          persistentVolumeClaim:
            claimName: fava-pv-claim
      containers:
        - name: fava
          image: "yegle/fava:version-1.14"
          volumeMounts:
            - mountPath: "/opt/beancount"
              name: fava-pv-beancountfile
          resources:
            limits:
              memory: 256Mi
              cpu: 1
          ports:
            - containerPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtual-host-ingress
spec:
  rules:
    - host: fava.ocf.berkeley.edu
      http:
        paths: 
          - backend:
              serviceName: service
              servicePort: 80
